<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/btn_1"
       />

   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:visibility="invisible"
       android:text="@string/btn_2"
       />

   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:enabled="false"
       android:text="@string/btn_3"
       />

   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:visibility="gone"
       android:text="@string/btn_4"
       />

   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:clickable="false"
       android:text="@string/btn_5"
       android:rotation="180"
       />

</LinearLayout>